# c64-rust-lib

./: Cargo.toml  README.md  build.rs
.devcontainer/: devcontainer.json
demo/: Cargo.toml
demo/src/: main.rs  plotek_tests.rs  reu_tests.rs  stash.rs  ultimate_tests.rs
plotek/: Cargo.toml
plotek/src/: cia2.rs  lib.rs
reu/: Cargo.toml
reu/src/: fake_interrupt.S  fake_interrupt.c  lib.rs  ram_expansion_unit.rs  reu_allocator.rs  reu_array.rs  vectors.rs
reu/tests/: test.rs
src/: cia2.rs  main.rs  plotek.rs  ultimate_64.rs  volatile_slice.rs
src/examples/: huge_mem_array.rs
src/reu/: custom_slice.rs  mod.rs  reubox.rs  wallocator.rs
ultimate64/: Cargo.toml
ultimate64/src/: lib.rs
