[package]
name = "rust-mos-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
lto = true
opt-level = 2
debug = 2
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
debug = 2

[patch.crates-io]
ufmt = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}
ufmt-write = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}

[dependencies]
# C stdio writer for ufmt
# https://docs.rs/ufmt-stdio/0.4.0/ufmt_stdio/
ufmt-stdio = "0.4.0"

# Hardware register tables and support functions for 8-bit retro computers like the Commodore 64, MEGA65 and others.
# https://docs.rs/mos-hardware/latest/mos_hardware/
mos-hardware = "0.4.0"

# Allocator for mos-unknown-none target (https://github.com/mrk-its/rust/tree/mos_target) and number of utilities for setting max heap size / checking free / used memory
# https://docs.rs/mos-alloc/0.2.0/mos_alloc/
mos-alloc = "0.2"

static_assertions = "1.1"
bitflags = "2.6.0"
# bitflags = "1"
volatile-register = "0.2"
volatile = "0.6.1"
