[package]
name = "rust-mos-hello-world"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "reu",
    "plotek",
    "ultimate64",
    "demo",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
lto = true
opt-level = 2
debug = 2
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
debug = 2

[patch.crates-io]
ufmt = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}
ufmt-write = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}

[dependencies]
reu = { path = "./reu" }
plotek = { path = "./plotek" }
ultimate64 = { path = "./ultimate64" }

ufmt-stdio = "0.4.0" # https://docs.rs/ufmt-stdio/0.4.0/ufmt_stdio/
mos-hardware = "0.4.0" # https://docs.rs/mos-hardware/latest/mos_hardware/
mos-alloc = "0.2" # https://docs.rs/mos-alloc/0.2.0/mos_alloc/
static_assertions = "1.1"
bitflags = "2.6.0"
volatile-register = "0.2"
volatile = "0.6.1"

[[bin]]
name = "demo"
path = "desmo/src/main.rs"